--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "dependencies": {
     "@tailwindcss/forms": "^0.5.6",
-    "tailwindcss": "^3.3.5"
+    "alpinejs": "^3.13.2",
+    "flowbite": "^2.2.0",
+    "gridjs": "^6.1.1",
+    "tailwindcss": "^3.3.5",
+    "three": "^0.160.1",
+    "tw-elements": "^1.0.0"
   },
   "scripts": {
     "build": "tailwindcss build web/css/site.css -o web/css/main.css"
+  },
+  "devDependencies": {
+    "vite": "^5.0.12"
   }
 }
